[package]
authors = ["jjy <jjyruby@gmail.com>"]
description = "Sparse merkle tree implement in rust"
edition = "2018"
license = "MIT"
name = "sparse-merkle-tree"
repository = "https://github.com/jjyr/sparse-merkle-tree"
version = "0.3.1-pre"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
blake2b = ["blake2b-rs"]
default = ["std", "blake2b"]
std = []

[dependencies]
blake2b-rs = {version = "0.2.0", optional = true}
borsh = {version = "0.9.0", optional = true}
cfg-if = "1.0.0"
ics23 = "0.10.2"
sha2 = "0.9.3"

[dev-dependencies]
criterion = "0.3.4"
hex = "0.4"
proptest = "1.0.0"
rand = "0.8.3"
random-string = "1.0.0"

[[bench]]
harness = false
name = "smt_benchmark"
